--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ node_js:
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: $github_token
+  #github_
+  token: $github_token
   local_dir: build
   repo: https://github.com/elmhe/comp3104_lab_f2022.git
   on:
