--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,27 @@
 language: node_js
 node_js:
   - "17"
+
+branches:
+  only:
+  - master
+
+cache:
+  directories:
+  - node_modules
+
+install:
+  - npm install
+  - npm install -g yarn
+
+script:
+  #- yarn lint
+  - yarn build
+  - mv build/index.html build/404.html
 deploy:
   provider: pages
   skip_cleanup: true
-  #github_
-  token: $github_token
+  github_token: $github_token
   local_dir: build
-  repo: https://github.com/elmhe/comp3104_lab_f2022.git
   on:
     branch: master
